# FIU-Python-Driver

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml  setup.cfg
.svn/: wc.db
src/FIU/: __init__.py  driver.py  fiu_types.py  interfaces.py
src/fiu/: driver.py
tests/: FIU_full_test.py  RS485_basic_test.py
