[project]
name = "bloomy_fiu_driver"
version = "1.0.0"
authors = [{ name = "Mikhail Kharitonov", email = "mikhail.kharitonov@bloomy.com"}]
description= "Python driver package to communicate with the Bloomy Fault Insertion Unit over RS-485 Protocol"
readme = "README.md"

[metadata]

[project_urls]
"Homepage" = "https://github.com/BloomyControls/FIU-Python-Driver"
"Bug Tracker" = "https://github.com/BloomyControls/FIU-Python-Driver/issues"
classifiers= [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[options]
python_requires = ">=3.7"
dependencies =["pyserial"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"